# food4u

./: .gitignore  CHANGELOG.org  CLAUDE.md  CONTRIBUTING.org  Cargo.toml  README.org  config.example.toml  flake.nix  justfile  llms.org  rust-template.json  rustfmt.toml  tasks.org  treefmt.toml
.cargo-husky/: README.md
.cargo-husky/hooks/: pre-commit
.claude/: settings.json
.claude/agents/: template-compliance.md
.claude/hooks/: review-stop.sh
.github/: branch-protection.json  dependabot.yml
.github/workflows/: branch-protection.yml  ci.yml  dependabot-automerge.yml  publish.yml  release-binaries.yml
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs  logging.rs
crates/server/: Cargo.toml  build.rs
crates/server/migrations/: 0001_initial.sql  0002_storage_location_zone.sql  0003_recipe_bookmarked.sql  0004_recipe_tags.sql  0005_meal_plan_entries.sql  0006_user_planner_days.sql  0007_user_column_order.sql  0008_item_count.sql
crates/server/src/: config.rs  db.rs  frontend.rs  import.rs  lib.rs  limits.rs  main.rs  model.rs  provision.rs  repo.rs  repo_pg.rs  routes.rs  seed.rs  store.rs  web_base.rs
crates/server/src/seed/: default_model.json  seed.sql
crates/server/tests/: db_test.rs  integration_test.rs  model_test.rs  provision_test.rs  repo_mutations_test.rs  repo_pg_test.rs  repo_test.rs
crates/server/tests/fixtures/: oidc-client-secret
dev/: dump-seed.sh
dev/oidc/: dex.yaml  login-demo.org  login-demo.sh
docs/: PROMPTS.md  editing-default-data.org  recipe-parser-test-plan.org  staples-auto-populate.org  systemd.org  template-compliance-plan.org
frontend/: elm-srcs.nix  elm.json
frontend/public/: about.html  donate.html  index.html  mind.html  style.css
frontend/src/: Ai.elm  AiView.elm  CartView.elm  Data.elm  Derived.elm  Ids.elm  KitchenView.elm  Main.elm  Model.elm  Msg.elm  Planner.elm  PlannerView.elm  PyramidView.elm  RecipeExport.elm  RecipeParser.elm  RecipesView.elm  Shopping.elm  Staples.elm  Style.elm  Types.elm  Ui.elm
frontend/tests/: CanonicalizeTest.elm  FidelityTest.elm  IdsTest.elm  PlannerExportTest.elm  RobustnessTest.elm  StaplesTest.elm
mockup/: longevity-food-pyramid.dc.html
nix/modules/: common.nix  darwin-server.nix  nixos-server.nix
